--- a/horizon/horizon/templates/horizon/common/_modal_form.html
+++ b/horizon/horizon/templates/horizon/common/_modal_form.html
@@ -1,9 +1,15 @@
 <div id="{% block modal_id %}{% endblock %}" class="{% block modal_class %}modal{% if hide %} hide {% else %} static_page{% endif %}{% endblock %}">
+  <div class="modal-header">
+    {% if hide %}<a href="#" class="close">&times;</a>{% endif %}
+    <h3>{% block modal-header %}{% endblock %}</h3>
+  </div>
+  {% if table %}
+  <div class="modal-body">
+  {{ table.render }}
+  </div>
+  <hr />
+  {% endif %}
   <form id="{% block form_id %}{% endblock %}" class="{% block form_class %}{% endblock %}" action="{% block form_action %}{% endblock %}" method="{% block form-method %}POST{% endblock %}" {% block form_attrs %}{% endblock %}>{% csrf_token %}
-    <div class="modal-header">
-      {% if hide %}<a href="#" class="close">&times;</a>{% endif %}
-      <h3>{% block modal-header %}{% endblock %}</h3>
-    </div>
     <div class="modal-body clearfix">
     {% block modal-body %}
         <fieldset>
