--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_launch.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_launch.html
@@ -48,5 +48,5 @@
 
 {% block modal-footer %}
   <input class="btn primary pull-right" type="submit" value="{% trans "Launch Instance" %}" />
-  <a href="{% url horizon:nova:images_and_snapshots:images:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
+  <a href="{% url horizon:nova:images_and_snapshots:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
