--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/volumes/attach.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/volumes/attach.html
@@ -1,11 +1,11 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
-{% block title %}Attach Volume{% endblock %}
+{% block title %}Manage Volume Attachments{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Attach a Volume") %}
+  {% include "horizon/common/_page_header.html" with title=_("Manage Volume Attachments") %}
 {% endblock page_header %}
 
 {% block dash_main %}
-    {% include 'nova/instances_and_volumes/volumes/_attach.html' with form=attach_form %}
+    {% include 'nova/instances_and_volumes/volumes/_attach.html' %}
 {% endblock %}
