Converted Syspanel Flavors table.
Change-Id: If7645c182d78aba052b16496858da0bd68c867f5

--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/flavors/index.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/flavors/index.html
@@ -9,6 +9,5 @@
 {% endblock page_header %}
 
 {% block syspanel_main %}
-  {% include "syspanel/flavors/_list.html" %}
-  <a id="flavor_create_link" class="btn small" href="{% url horizon:syspanel:flavors:create %}">{% trans "Create New Flavor" %}</a>
+  {{ table.render }}
 {% endblock %}
