--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_list.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_list.html
@@ -59,10 +59,18 @@
         <td id="name_{{ instance.name }}" class="actions">
           <a class="more-actions" href="#">More</a>
           <ul>
+            {% if instance.status == 'PAUSED' %}
+              <li>{% include 'nova/instances_and_volumes/instances/_unpause.html' with form=unpause_form %}</li>
+            {% endif %}
+            {% if instance.status == 'SUSPENDED' %}
+              <li>{% include 'nova/instances_and_volumes/instances/_resume.html' with form=resume_form %}</li>
+            {% endif %}
             {% if instance.status == "ACTIVE" %}
               <li><a class="btn small" target='_blank' href='{% url horizon:nova:instances_and_volumes:instances:vnc instance.id %}'>{% trans 'VNC Console' %}</a></li>
               <li><a class='btn small' target='_blank' href='{% url horizon:nova:instances_and_volumes:instances:console instance.id %}'>{% trans 'Log' %}</a></li>
               <li><a class='btn small' href='{% url horizon:nova:images_and_snapshots:snapshots:create instance.id %}'>{% trans 'Snapshot' %}</a></li>
+              <li>{% include 'nova/instances_and_volumes/instances/_pause.html' with form=pause_form %}</li>
+              <li>{% include 'nova/instances_and_volumes/instances/_suspend.html' with form=suspend_form %}</li>
               <li>{% include 'nova/instances_and_volumes/instances/_reboot.html' with form=reboot_form %}</li>
             {% endif %}
             <li><a class='btn small' href='{% url horizon:nova:instances_and_volumes:instances:update instance.id %}'>{% trans 'Edit' %}</a></li>
