Converts images and snapshots to new tables, modals, error handling, etc.
Fixed bug 905235. Fixed bug 906487.

Change-Id: Ida68d82508357fe31695c0c66f7aaeabdc911105

--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_update.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_update.html
@@ -20,5 +20,5 @@
 
 {% block modal-footer %}
   <input class="btn primary pull-right" type="submit" value="{% trans "Update Image" %}" />
-  <a href="{% url horizon:nova:images_and_snapshots:images:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
+  <a href="{% url horizon:nova:images_and_snapshots:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
