--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_launch.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_launch.html
@@ -1,12 +1,11 @@
 {% extends "horizon/common/_modal_form.html" %}
 {% load i18n %}
 
-{% block form_id %}{% endblock %}
-{% block form_action %}{% url horizon:nova:images_and_snapshots:images:launch image_id %}{% endblock %}
+{% block form_id %}launch_image_form{% endblock %}
+{% block form_action %}{% url horizon:nova:images_and_snapshots:images:launch image.id %}{% endblock %}
 
-{% block modal_id %}launch_image_{{ image_id }}{% endblock %}
-{% block modal_class %}launch_image modal hide{% endblock %}
-{% block modal-header %}Launch Instances{% endblock %}
+{% block modal_id %}launch_image_{{ image.id }}{% endblock %}
+{% block modal-header %}{% trans "Launch Instances" %}{% endblock %}
 
 {% block modal-body %}
 <div class="left">
