--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/index.html
@@ -1,28 +1,16 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
-{% block title %}Images &amp; Snapshots{% endblock %}
+{% block title %}{% trans "Images &amp; Snapshots" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Images &amp; Snapshots") %}
 {% endblock page_header %}
 
 {% block dash_main %}
-  {% if images %}
-    {% include 'nova/images_and_snapshots/images/_list.html' %}
-  {% else %}
-    <div class="alert-message block-message info">
-      <p><strong>{% trans "Info: " %}</strong>{% trans "There are currently no images." %}</p>
-    </div>
-  {% endif %}
-
-  {% if snapshots %}
-    {% include 'nova/images_and_snapshots/snapshots/_list.html' %}
-  {% else %}
-    <div class="alert-message block-message info">
-      <p><strong>{% trans "Info: " %}</strong>{% trans "There are currently no snapshots. You can create snapshots from running instances." %}</p>
-      <div class="alert-actions">
-        <a class="btn small primary" href='{% url horizon:nova:instances_and_volumes:index %}'>{% trans "View Running Instances" %}</a>
-      </div>
-    </div>
-  {% endif %}
+  <div class="images">
+    {{ images_table.render }}
+  </div>
+  <div class="snapshots">
+    {{ snapshots_table.render }}
+  </div>
 {% endblock %}
