--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/snapshots/_create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/snapshots/_create.html
@@ -21,5 +21,5 @@
 
 {% block modal-footer %}
      <input class="btn primary pull-right" type="submit" value="{% trans "Create Snapshot" %}" />
-     <a href="{% url horizon:nova:images_and_snapshots:snapshots:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
+     <a href="{% url horizon:nova:images_and_snapshots:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
