Tooltip implementation cleanup.
Re-enables tooltips for modal forms (previously not using delegated events). Fixes bug 918950.
Aligned the x position of the tooltips. Fixes 915762.
Reworks triggers for checkboxes to better handle focus/hover. Fixes bug 915765.

Change-Id: Ic728fd426418c5d81f87256b0674f21050c0e79c

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -643,8 +643,15 @@ table tfoot tr td {
     width: 372px;
 }
 
-.modal fieldset input, .modal fieldset select, .modal fieldset textarea, .modal fieldset ul {
+.modal .form-field,
+.modal fieldset ul {
     width: 90%;
+}
+
+.modal fieldset .form-field input,
+.modal fieldset .form-field select,
+.modal fieldset .form-field textarea {
+  width: 100%;
 }
 
 .modal .modal-footer input {
