Made cancel button more visible.
  * fixes bug 898983

Change-Id: I314496125effeb6865568d79de2e403d54332c0c

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -673,11 +673,12 @@ table tfoot tr td {
   margin-top: 0;
     margin-right: 5px;
     font-size: 12px;
-    color: #999;
+    color: #666;
     font-weight: normal;
   filter: alpha(opacity=100);
   -khtml-opacity: 1;
   -moz-opacity: 1;
+  opacity: 1;
 }
 
 .modal-footer a.close:hover {
