Converts syspanel.images to use datatables, new modals, etc.
Also finishes some cleanup on nova.snapshots that got forgotten.

There was a ton of dead code that was removed from syspanel.images
which clearly hadn't been used/tested/accessible since the diablo
release or earlier.

Change-Id: Ic9a9284b23574b10f6c34c90026b054d6608dc7c

--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/snapshots/create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/snapshots/create.html
@@ -1,13 +1,13 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
-{% block title %}Create Snapshot{% endblock %}
+{% block title %}{% trans "Create Snapshot" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Create a Snapshot") %}
 {% endblock page_header %}
 
 {% block dash_main %}
-    {% include 'nova/images_and_snapshots/snapshots/_create.html' with form=create_form %}
+    {% include 'nova/images_and_snapshots/snapshots/_create.html' %}
 {% endblock %}
 
 
