--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/images/index.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/images/index.html
@@ -1,13 +1,11 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n %}
-{% block title %}Images{% endblock %}
+{% block title %}{% trans "Images" %}{% endblock %}
 
 {% block page_header %}
-  {% url horizon:syspanel:images:index as refresh_link %}
-  {# to make searchable false, just remove it from the include statement #}
-  {% include "horizon/common/_page_header.html" with title=_("Images") refresh_link=refresh_link searchable="true" %}
+  {% include "horizon/common/_page_header.html" with title=_("Images") %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
-  {% include "syspanel/images/_list.html" %}
+  {{ table.render }}
 {% endblock %}
