Novaclient for usage features.  Kill openstackx.
 * Fixes bug 848403
 * blueprint novaclient-migration
 * Fully removes openstackx
 * Needs https://review.openstack.org/3382 to work for non-admin users

Change-Id: I3e7fcf2f79a92c92c6c66ff0637ed874563496d6

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -546,6 +546,7 @@ table form {
   min-width: 735px;
   padding: 5px 0 5px 0;
   border: 1px solid #e6e6e6;
+  clear: both;
 }
 
 #activity.tenant { margin: 0 0 0 0; }
@@ -950,4 +951,12 @@ form div.clearfix.error {
   display: block;
   border: 1px solid #e1e1e1;
   padding: 5px;
+}
+#date_form {
+  width: 100%;
+  float: left;
+}
+#date_form select, #date_form input {
+  float: left;
+  margin-right: 10px;
 }
