--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/usage.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/usage.html
@@ -1,69 +1,39 @@
-{% extends 'syspanel/base.html' %}
+{% extends 'syspanel/tenants/base_usage.html' %}
 {% load i18n sizeformat %}
 {% block title %}Usage Overview{% endblock %}
+{% block activity_list %}
+  {% if instances %}
+    <div id="usage">
 
-{% block page_header %}
-  {# to make searchable false, just remove it from the include statement #}
-  {% include "horizon/common/_page_header.html" with title=_("System Panel Overview") %}
-{% endblock page_header %}
-
-{% block syspanel_main %}
-{% if external_links %}
-  <div id="monitoring">
-    <h3>{% trans "Monitoring" %}: </h3>
-    <ul id="external_links">
-      {% for link in external_links %}
-        <li><a target="_blank" href="{{ link.1 }}">{{ link.0}}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
-{% endif %}
-
-<form action="" method="get" id="date_form" class="form-horizontal">
-  <h3>{% trans "Select a month to query its usage" %}: </h3>
-  <div class="form-row">
-    {{ dateform.month }}
-    {{ dateform.year }}
-    <input class="btn small" type="submit"/>
-  </div>
-</form>
-
-<p id="activity">
-  <span><strong>{% trans "Active Instances" %}:</strong> {{ global_summary.total_active_instances|default:'-' }}</span>
-  <span><strong>{% trans "This month's VCPU-Hours" %}:</strong> {{ global_summary.total_cpu_usage|floatformat|default:'-' }}</span>
-  <span><strong>{% trans "This month's GB-Hours" %}:</strong> {{ global_summary.total_disk_usage|floatformat|default:'-' }}</span>
-</p>
-
-{% if usage_list %}
-  <div id="usage">
-    <div class="table_header">
-      <div class='table_title wide'>
-        <a class="csv_download_link pull-right" href="{{ csv_link }}">{% trans "Download CSV" %} &raquo;</a>
-        <h3>{% trans "Server Usage Summary" %}</h3>
-      </div>
+      <table class="table table-striped table-bordered zebra-striped">
+        <thead>
+          <tr id="headings">
+            <th>{% trans "Instances" %}</th>
+            <th>{% trans "VCPUs" %}</th>
+            <th>{% trans "Disk" %}</th>
+            <th>{% trans "RAM" %}</th>
+            <th>{% trans "Hours" %}</th>
+            <th>{% trans "Uptime" %}</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for instance in instances %}
+            <tr>
+              <td>{{ instance.name }}</td>
+              <td>{{ instance.vcpus }}</td>
+              <td>{{ instance.local_gb|diskgbformat }}</td>
+              <td>{{ instance.memory_mb|mbformat }}</td>
+              <td>{{ instance.hours|floatformat}}</td>
+              <td>{{ instance.uptime_at|timesince}}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+        <tfoot>
+          <td colspan="7">
+            <span>Tenant Server Usage Summary.</span>
+            <a class="csv_download_link pull-right" href="{{ csv_link }}">{% trans "Download CSV" %} &raquo;</a>
+          </td>
+        </tfoot>
     </div>
-
-    <table class="table table-striped table-bordered">
-      <tr id="headings">
-        <th>{% trans "Tenant" %}</th>
-        <th>{% trans "Instances" %}</th>
-        <th>{% trans "VCPUs" %}</th>
-        <th>{% trans "Disk" %}</th>
-        <th>{% trans "RAM" %}</th>
-        <th>{% trans "VCPU CPU-Hours" %}</th>
-        <th>{% trans "Disk GB-Hours" %}</th>
-      </tr>
-      {% for usage in usage_list %}
-        <tr>
-          <td><a href="{% url horizon:syspanel:tenants:usage usage.tenant_id %}">{{ usage.tenant_id }}</a></td>
-          <td>{{ usage.total_active_instances }}</td>
-          <td>{{ usage.total_active_vcpus }}</td>
-          <td>{{ usage.total_active_disk_size|diskgbformat }}</td>
-          <td>{{ usage.total_active_ram_size|mbformat }}</td>
-          <td>{{ usage.total_cpu_usage|floatformat }}</td>
-          <td>{{ usage.total_disk_usage|floatformat }}</td>
-        </tr>
-      {% endfor %}
-  </div>
-{% endif %}
+  {% endif %}
 {% endblock %}
